--- a/templates/popup.html
+++ b/templates/popup.html
@@ -2,7 +2,7 @@
 
 <head>
     <link rel="stylesheet" href="main.css">
-    <script src="popup.js"></script>
+    <script src="../scripts/popup.js"></script>
 </head>
 
 <body>
