message brokering system, update async

--- a/templates/sidepanel.html
+++ b/templates/sidepanel.html
@@ -16,5 +16,8 @@
   <div id="output">Loading...</div>
 
   <script src="../scripts/sidepanel.js"></script>
+
+  <button id="learnMoreButton">Learn More</button>
+
 </body>
 </html>
