ready for ts transformation

--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -12,6 +12,6 @@
         <div id="result"></div>
     </div>
 
-    <!-- <script src="../scripts/quiz.js"></script> -->
+    <script src="../scripts/quiz.js"></script>
 </body>
 </html>
